# joshai-challenge

./: .clang-format  CMakeLists.txt  README.md
docs/: ArgException_8h_source.html  ArgTraits_8h_source.html  Arg_8h_source.html  CmdLineOutput_8h_source.html  CmdLine_8h_source.html  Doxyfile  MultiArg_8h_source.html  OptionalUnlabeledTracker_8h_source.html  StandardTraits_8h_source.html  StdOutput_8h_source.html  SwitchArg_8h_source.html  ValueArg_8h_source.html  Visitor_8h_source.html  XorHandler_8h_source.html  ZshCompletionOutput_8h_source.html  annotated.html  classConnectionManager-members.html  classConnectionManager__coll__graph.map  classConnectionManager__coll__graph.md5  classDataStore.html  classDataStore__coll__graph.map  classLight.html  classLight__coll__graph.map  classLight__coll__graph.md5  classLightsInterface__coll__graph.map  classTCLAP_1_1Arg-members.html  classTCLAP_1_1ArgException-members.html  classTCLAP_1_1ArgParseException-members.html  classTCLAP_1_1ArgTraits-members.html  classTCLAP_1_1ArgTraits.html  classTCLAP_1_1CmdLine-members.html  classTCLAP_1_1CmdLineInterface-members.html  classTCLAP_1_1CmdLineOutput.html  classTCLAP_1_1CmdLine__coll__graph.md5  classTCLAP_1_1Constraint-members.html  classTCLAP_1_1Constraint.html  classTCLAP_1_1DocBookOutput.html  classTCLAP_1_1HelpVisitor.html  classTCLAP_1_1IgnoreRestVisitor-members.html  classTCLAP_1_1IgnoreRestVisitor.html  (+337 more)
docs/html/: CmdLineInterface_8h_source.html  (+361 more)
src/: api.cpp  client.cpp  connection_manager.cpp  console_output.cpp  data_store.cpp  light.cpp  light_interface.cpp  main.cpp
(+486 files in other folders)
